public/stylesheets/style.css
body{font-family:"Lucida Grande";background:#333; color: #333;margin:0;padding:0;}
a{color:#39F;text-decoration:none;}
li{padding-bottom:4px;}
.big {font-size:20px; line-height:16px; vertical-align:top;}
.box{border:3px solid #BBB; background-color:#FFF; padding:10px;}
.center{text-align:center;}
.clear{clear:both;}
.container{width:600px;margin:0px auto; padding-bottom:10px;}
.description {padding-bottom:50px;}
.left{width:45%;padding:5px;float:left;}
.light{color:#AAA;}
.lighter{color:#CCC;}
.map {font-size:12px;}
.ride h3 {padding-left:10px;}
.right{width:45%;padding:5px;float:right;}
.route {font-size:13px; margin:10px 0 20px 0; padding-left:10px;}
.route .details {border-top:1px dotted #BBB; margin-top:5px; padding-top:10px; font-size:14px;}
.route .title {font-size:16px; margin-bottom:2px;}
.route .description {margin-bottom:10px;}
.route .location {margin:5px 0;}
.route .date {margin:5px 0;}
.route .all_dates {font-size:12px;}
.route .all_dates table {border: 1px solid #BBB; border-collapse:collapse;}
.text_left{text-align:left;}
.text_right{text-align:right;}
.video {font-size:12px;}
.video a {color:#999;}
.video iframe {border:3px solid #BBB;}
#content{min-height:400px;background:#9DF;background:-moz-linear-gradient(0% 85% 90deg,#9DF,#DEF);background:-webkit-gradient(linear,0% 0%,0% 85%,from(#DEF),to(#9DF));}
#content h1{font-size:132px;margin:0;padding:0;font-family:"Times";color:#333;}
#content h2{font-size:22px;margin:0;padding:10px 0;color:#036;font-family:"Arial";}
#content .route_link{text-align:right;}
#dateline{text-align: center;}
#footer{padding-top:20px;color:#DDD;font-size:12px;background:#555;background:-moz-linear-gradient(100% 85% 90deg,#333,#555);background:-webkit-gradient(linear,0% 0%,0% 85%,from(#555),to(#333));}
#footer h5{color:#FFF;border-bottom:1px solid #FFF;padding-bottom:5px;}
#footer ul{padding:0;}
#footer li{list-style-type:none; padding-bottom:4px;}
#wrapper{width:100%;}
#wrapper.content{border-bottom:1px solid #DEF;}
#wrapper.footer{background:#333;border-top:1px solid #333;}

